# MathsAlgorithms

./: .gitignore  CMakeLists.txt  README.md  gun.py
Erastothenes/: CMakeLists.txt  Erastothenes.cpp  Erastothenes.h  Erastothenes.xlsx  Erastothenes_dyn_array.cpp
trajectories/: gun.py
