# CMakeList.txt : CMake project for Erastothenes, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Erastothenes "Erastothenes.cpp")

# Add source to this project's executable.
add_executable (Erastothenes_dyn_array "Erastothenes_dyn_array.cpp")

# TODO: Add tests and install targets if needed.
